--- a/pepeizqs deals web/Idiomas/Languages/de.json
+++ b/pepeizqs deals web/Idiomas/Languages/de.json
@@ -15,5 +15,14 @@
   "nl": "Niederländisch",
   "da": "dänisch",
   "cz": "tschechisch",
-  "fi": "finnisch"
+  "fi": "finnisch",
+  "ko": "Koreanisch",
+  "zhs": "Chinesisch (vereinfacht)",
+  "zht": "Chinesisch (traditionell)",
+  "ja": "japanisch",
+  "hu": "ungarisch",
+  "tr": "Türkisch",
+  "uk": "ukrainisch",
+  "ru": "Russisch",
+  "ar": "Arabisch"
 }
