--- a/pepeizqs deals web/Idiomas/Languages/es.json
+++ b/pepeizqs deals web/Idiomas/Languages/es.json
@@ -15,5 +15,14 @@
   "nl": "Holandés",
   "da": "Danés",
   "cz": "Checo",
-  "fi": "Finés"
+  "fi": "Finés",
+  "ko": "Koreano",
+  "zhs": "Chino (Simplificado)",
+  "zht": "Chino (Tradicional)",
+  "ja": "Japonés",
+  "hu": "Húngaro",
+  "tr": "Turco",
+  "uk": "Ucraniano",
+  "ru": "Ruso",
+  "ar": "Árabe"
 }
