--- a/pepeizqs deals web/Idiomas/Languages/fr.json
+++ b/pepeizqs deals web/Idiomas/Languages/fr.json
@@ -15,5 +15,14 @@
   "nl": "Néerlandais",
   "da": "danois",
   "cz": "tchèque",
-  "fi": "finlandais"
+  "fi": "finlandais",
+  "ko": "coréen",
+  "zhs": "Chinois (simplifié)",
+  "zht": "Chinois (traditionnel)",
+  "ja": "japonais",
+  "hu": "hongrois",
+  "tr": "turc",
+  "uk": "ukrainien",
+  "ru": "russe",
+  "ar": "arabe"
 }
