--- a/pepeizqs deals web/Idiomas/Languages/it.json
+++ b/pepeizqs deals web/Idiomas/Languages/it.json
@@ -15,5 +15,14 @@
   "nl": "Olandese",
   "da": "danese",
   "cz": "ceco",
-  "fi": "finlandese"
+  "fi": "finlandese",
+  "ko": "coreano",
+  "zhs": "Cinese (semplificato)",
+  "zht": "Cinese (tradizionale)",
+  "ja": "giapponese",
+  "hu": "ungherese",
+  "tr": "turco",
+  "uk": "ucraino",
+  "ru": "russo",
+  "ar": "arabo"
 }
