--- a/pepeizqs deals web/Idiomas/Languages/pt.json
+++ b/pepeizqs deals web/Idiomas/Languages/pt.json
@@ -15,5 +15,14 @@
   "nl": "Holandês",
   "da": "dinamarquês",
   "cz": "Tcheco",
-  "fi": "finlandês"
+  "fi": "finlandês",
+  "ko": "coreano",
+  "zhs": "Chinês (simplificado)",
+  "zht": "Chinês (tradicional)",
+  "ja": "japonês",
+  "hu": "húngaro",
+  "tr": "turco",
+  "uk": "ucraniano",
+  "ru": "russo",
+  "ar": "árabe"
 }
